[package]
name = "raidish"
version = "0.1.0"
edition = "2024"

[dependencies]
reed-solomon-erasure = "4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = { version = "1.0.133", features = ["raw_value"] }
serde = "1.0.216"
tokio-stream = { version = "0.1.17", features = ["io-util"] }
clap = { version = "4.5", features = ["derive","color"] }
uuid = { version = "1.19.0", features = ["v4"] }
sha256 = "1.6.0"
rocket = { version = "0.5.1", features = ["json","uuid"] }
ws = { package = "rocket_ws", version = "0.1.1" }
url = "2.5.8"
reqwest = "0.13.1"
etcd-client = "0.16"
bincode = "1"
libc = "0.2.180"
blake3 = "1.8.3"
chrono = "0.4.43"
termion = "2.0"
term_size = "0.3.2"
tokio-tungstenite = "0.28.0"
futures-util = "0.3"
tungstenite = "0.28"
futures = "0.3"
serde_yaml = "0.9"
async-trait = "0.1"