[package]
name = "raidish"
version = "0.1.0"
edition = "2024"

[dependencies]
reed-solomon-simd = "3.1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tokio-tungstenite = "0.28.0"
tungstenite = "0.28"
futures-util = "0.3"
futures = "0.3"

serde_json = { version = "1.0.133", features = ["raw_value"] }
serde = "1.0.216"
serde_yaml = "0.9"

rocket = { version = "0.5.1", features = ["json","uuid"] }
ws = { package = "rocket_ws", version = "0.1.1" }
etcd-client = "0.16"

clap = { version = "4.5", features = ["derive","color"] }
url = "2.5.8"
reqwest = "0.13.1"
bincode = "1"
blake3 = "1.8.3"
chrono = "0.4.43"
termion = "2.0"
term_size = "0.3.2"
async-trait = "0.1"
dashmap = "6.1.0"
crossbeam-queue = "0.3.12"

[dev-dependencies]
tempfile = "3.24.0"